--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -10,7 +10,7 @@
 	<h1>Comments</h1>
 	<ul>
 		<% for (let c of comments) { %> 
-			<li><%= c.text %> - <b><%= c.user %></b></li>
+			<li><%= c.comment %> - <b><%= c.username %></b></li>
 		<% } %> 
 	</ul>
 </body>
