--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -16,6 +16,6 @@
 		<textarea name="comment" id="comment" cols="30" rows="10"></textarea>
 		<button>Submit</button>
 	</form>
-
+	<a href="/comments">Back to Index</a>
 </body>
 </html>
